fixed legend to be aligned

--- a/css/site.css
+++ b/css/site.css
@@ -74,8 +74,8 @@ body{
     padding:5px;
 }
 .legend i {
-    width: 18px;
-    height: 18px;
+    width: 1em;
+    height: 1em;
     float: left;
     margin-right: 8px;
     opacity: 0.7;
